MDEV-14684 Assertion `table' failed in mysql_delete

SQL: disable TRUNCATE table_name TO statement for VIEWs